objects/ASI_CN_NPL_NPL_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CN_NPL_Packing__c</fullName>
        <label>Packing (bottle x size)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_PnL_BA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PnL BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_RequestsZ8zX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pre_Approval_Date__c</fullName>
        <label>Pre-Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_Bar__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>Bar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_CR__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_FKTV__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>FKTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_KTV__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>KTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_Off_Trade__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>Off Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_Trade__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>Trade - Selling Price to T1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Name_Chinese__c</fullName>
        <label>Product Name (Chinese)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Name_English__c</fullName>
        <label>Product Name (English)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Photo_Count__c</fullName>
        <label>Product Photo Count</label>
        <summarizedField>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Product_Photo_Count__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Product_Photo_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Production_Cost__c</fullName>
        <inlineHelpText>(BO currency per liter)</inlineHelpText>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Profit_Loss__c</fullName>
        <label>Profit &amp; Loss</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Proposed_Selling_Price__c</fullName>
        <inlineHelpText>RMB/btl (e.g. 100)</inlineHelpText>
        <label>Proposed Selling Price to T1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Reason_to_Launch__c</fullName>
        <label>Justification: Reason to Launch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Remark__c</fullName>
        <label>NPL Remark</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Request_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>contains</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_RequestsDdsX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Request_ETA_MM__c</fullName>
        <label>Request ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Request_ETA__c</fullName>
        <label>Request ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_SKU_Type__c</fullName>
        <label>SKU Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-going SKU</fullName>
                </value>
                <value>
                    <fullName>One-shot SKU</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Gift-Set</fullName>
                </value>
                <value>
                    <fullName>In-Pack</fullName>
                </value>
                <value>
                    <fullName>Limited Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sales_Vol_Forecast_Picture__c</fullName>
        <label>Sales Vol Forecast Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Size_Bottle__c</fullName>
        <label>Size: Bottle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Size_Box__c</fullName>
        <label>Size: Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Size_Carton__c</fullName>
        <label>Size: Carton</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Source_of_Volume__c</fullName>
        <label>Justification: Source of Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Waiting for Pre-Approval</fullName>
                </value>
                <value>
                    <fullName>Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Price Scenario</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Final Proposed Selling Price</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Launch Plan</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Vol Estimation</fullName>
                </value>
                <value>
                    <fullName>Waiting for S&amp;OP Alignment</fullName>
                </value>
                <value>
                    <fullName>Waiting for Final Approval</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approval (TP is Pending)</fullName>
                </value>
                <value>
                    <fullName>Final Approval (TP is Approved)</fullName>
                </value>
                <value>
                    <fullName>Final Approval (TP is Rejected)</fullName>
                </value>
                <value>
                    <fullName>Final Approval (Domestic TP is Approved)</fullName>
                </value>
                <value>
                    <fullName>Final Approval (MM TP is Approved)</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting to Fill in Profit and Loss (Approval)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Step_1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 1 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Step_2_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 2 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Step_3_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_CN_NPL_Sub_brand__c</referenceTo>
        <relationshipLabel>New Product Launch Requests</relationshipLabel>
        <relationshipName>New_Product_Launch_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supermarket_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Supermarket - MOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_SupplyPlan_Dom_StartDate__c</fullName>
        <label>Supply Plan Domestic Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_SupplyPlan_MM_StartDate__c</fullName>
        <label>Supply Plan MM Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_M1__c</fullName>
        <label>M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_M2__c</fullName>
        <label>M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_M3__c</fullName>
        <label>M3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_MM_M1__c</fullName>
        <label>M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_MM_M2__c</fullName>
        <label>M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Supply_Plan_MM_M3__c</fullName>
        <label>M3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TI_Plan_Covered_Region__c</fullName>
        <label>Covered Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Macau</fullName>
                </value>
                <value>
                    <fullName>Mongolia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TI_Plan_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TI_Plan_Remark__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TI_Plan_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TI_Plan_Terms__c</fullName>
        <label>Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Target_Vol_Domestic__c</fullName>
        <label>Target Volume: Domestic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Target_Vol_Mongolia__c</fullName>
        <label>Target Volume: Mongolia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Target_Volume_Macau__c</fullName>
        <label>Target Volume: Macau</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Tobacco_Store_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Tobacco &amp; Liquor Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Trade_Marketing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>Trade Marketing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Trademark_Registration_Email__c</fullName>
        <formula>IF( ASI_CN_NPL_Trademark_Registration__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trademark Registration (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Trademark_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trademark Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Transfer_Price_CIF__c</fullName>
        <inlineHelpText>The default term is as CIF, please indicate the TP as Currency per cs (e.g. USD 80.00). If it is not CIF, please indicate as Term Currency per cs (e.g. FOB EUR 80.00)</inlineHelpText>
        <label>Transfer Price (CIF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_VIP_Channel_Percent__c</fullName>
        <inlineHelpText>Sum of all channels % should be 100%</inlineHelpText>
        <label>VIP Channel %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Western_Bar_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Western Bar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_When_to_Launch__c</fullName>
        <label>Justification: When (Mongolia)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Wholesaler_Store_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Wholesaler Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Wine_Shop_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Wine Shop - TOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_NPLT1PriceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPLT1PriceFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Repack__c</fullName>
        <label>Repack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selective_Picklist__c</fullName>
        <label>Selective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selective (ETL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Allow_Edit_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Attachment_Line_Count__c</fullName>
        <label>Attachment Line Count</label>
        <summaryFilterItems>
            <field>ASI_CN_NPL_Product_Document__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>KR NPL Product Photo</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_BA_Manager_Approval_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BA Manager Approval 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_BA_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BA Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Bar_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Bar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Brand_Information__c</fullName>
        <label>Brand Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Brand_Owner__c</fullName>
        <label>Brand Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHIVAS BROTHERS LTD</fullName>
                </value>
                <value>
                    <fullName>Martell &amp; Co</fullName>
                </value>
                <value>
                    <fullName>THE ABSOLUT COMPANY AB</fullName>
                </value>
                <value>
                    <fullName>Ricard</fullName>
                </value>
                <value>
                    <fullName>Pernod</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Winemakers Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Havana Club International S.A</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Winemakers SPAIN, S.A.</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Mexico</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard USA</fullName>
                </value>
                <value>
                    <fullName>WYBOROWA SA</fullName>
                </value>
                <value>
                    <fullName>G.H.MUMM &amp; CIE.</fullName>
                </value>
                <value>
                    <fullName>Perrier Jouet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Brand_Team__c</fullName>
        <formula>if(ASI_CN_NPL_Brand_Director__r.UserRole.DeveloperName = &apos;ASI_FOC_Brand_Director_Whiskies&apos;, &apos;Whiskies&apos;,
  if(ASI_CN_NPL_Brand_Director__r.UserRole.DeveloperName = &apos;ASI_FOC_Brand_Director_Wine&apos;, &apos;Wine&apos;,
      if(ASI_CN_NPL_Brand_Director__r.UserRole.DeveloperName = &apos;ASI_FOC_Brand_Director_MMPJ&apos;, &apos;MMPJ&apos;,&apos;&apos;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_BulkPurchase_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>BulkPurchase - BP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Category_1__c</fullName>
        <label>Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>International Whisky</fullName>
                </value>
                <value>
                    <fullName>Local Whisky</fullName>
                </value>
                <value>
                    <fullName>Modern Spirits</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Category_2__c</fullName>
        <label>Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Other Whisky</fullName>
                </value>
                <value>
                    <fullName>Blended Whisky Korea</fullName>
                </value>
                <value>
                    <fullName>Bourbon Whisky</fullName>
                </value>
                <value>
                    <fullName>Canadian Whisky</fullName>
                </value>
                <value>
                    <fullName>Irish Whisky</fullName>
                </value>
                <value>
                    <fullName>Malt Whisky</fullName>
                </value>
                <value>
                    <fullName>Scotch Whisky</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wines</fullName>
                </value>
                <value>
                    <fullName>Still Wines</fullName>
                </value>
                <value>
                    <fullName>Gin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>유흥용- On Trade</fullName>
                </value>
                <value>
                    <fullName>할인용 - Discount Store</fullName>
                </value>
                <value>
                    <fullName>가정용 - Off Trade</fullName>
                </value>
                <value>
                    <fullName>군비면세 - Army Tax Paid</fullName>
                </value>
                <value>
                    <fullName>국내면세 - Domestic DF</fullName>
                </value>
                <value>
                    <fullName>군면세 - Army Tax Free</fullName>
                </value>
                <value>
                    <fullName>리쿼샵 - Liquor Shop</fullName>
                </value>
                <value>
                    <fullName>기타 (구 유흥용)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Convenience_Store_Chain_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Convenience Store Chain - MOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPL_Domestic_TP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic TP Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_ETA_Domestic__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_ETA__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Actual_ETA__c</fullName>
        <label>Actual ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Available_Date__c</fullName>
        <label>HQ Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Destination__c</fullName>
        <label>Destination (HQ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Estimate_Available_Date__c</fullName>
        <label>Estimate Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Invoice_Receipt_Date__c</fullName>
        <label>Invoice Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_PO_Released_Date__c</fullName>
        <label>PO Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Request_ETA__c</fullName>
        <label>Request ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_SupplyPlan_Dom_StartDate__c</fullName>
        <label>SupplyPlan Dom StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Supply_Plan_M1__c</fullName>
        <label>Supply Plan M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_HQ_Supply_Plan_M2__c</fullName>
        <label>Supply Plan M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>